Fix view of media grid when the image name is too long

--- a/app/assets/stylesheets/Custom.css
+++ b/app/assets/stylesheets/Custom.css
@@ -11,6 +11,12 @@
     overflow:auto;
 }
 
+
+.modal{
+    background-color:rgba(0,0,0,0.5);
+    padding-top:100px;
+    overflow:auto;
+
 .changePass{
     background-color: #f5f5f5;
     padding: 40px 3px 0 40px;
@@ -117,6 +123,7 @@
     background-color: #f5f5f5;
     padding: 5px;
     line-height: 20px;
+    margin-bottom: 15px;
 }
 
 
@@ -135,7 +142,9 @@
 
 
 .imageThumbnail {
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
+   margin-top: 15px;
+   margin-bottom: 0px;
 }
 
 
@@ -1776,6 +1785,7 @@ table.customTable {
     background-color: #f5f5f5;
     padding: 5px;
     line-height: 20px;
+    text-align: center;
 }
 
     .Taxon_Name .latinName {
@@ -1788,7 +1798,7 @@ table.customTable {
     }
 
 .imageThumbnail {
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
     background: url('loading.gif') no-repeat;
 }
 
